--- a/CSS/global.css
+++ b/CSS/global.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:var(--ff-sans);
 }
 img {
     width: 100%;
