--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -25,3 +25,49 @@ nav {
     gap:var(--spacing);
 }
 /* Nav--end */
+/* Header--start */
+/* 
+    1.高度使用hight且使用背景
+    2.高度使用padding且使用背景
+    3.高度等比例且使用背景
+    4.高度使用hight且使用img
+    5.高度等比例且使用img
+    若網站沒有任何的圖片輪播、後端資料串接可直接使用背景的方式製作banner（1,2,3）
+    反之則建議使用img當作banner。（4,5）
+*/
+
+header {
+    width: 100%;
+    /* height: 600px; */
+    /* padding-block: 300px; */
+    /* padding-bottom: 33%; */
+    aspect-ratio: 16 / 9;
+    /* min-height: 400px; */
+    /* max-height: 600px; */
+    /* background-color: #098; */
+    /* background-image: url('https://picsum.photos/id/87/1600/1000'); */
+    /* background-repeat: no-repeat; */
+    /* background-position: center; */
+    /* background-size: cover; */
+
+    position: relative;
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+/* header img {
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+} */
+.header-content {
+    background-color:var(--clr-primary);
+    width: 400px;
+    height: fit-content;
+    position: absolute;
+    inset:0;
+    margin:auto;
+    text-align: center;
+    padding: 30px;
+}
+/* Header--end */
