--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -43,7 +43,7 @@ header {
     /* padding-bottom: 33%; */
     aspect-ratio: 16 / 9;
     /* min-height: 400px; */
-    /* max-height: 600px; */
+    max-height: 700px;
     /* background-color: #098; */
     /* background-image: url('https://picsum.photos/id/87/1600/1000'); */
     /* background-repeat: no-repeat; */
@@ -61,7 +61,10 @@ header {
     object-fit:cover;
 } */
 .header-content {
-    background-color:var(--clr-primary);
+    /* background-color:var(--clr-primary); */
+    background-color:rgb(255 255 255 / .2);
+    backdrop-filter: blur(5px);
+    /* filter: blur(5px); */
     width: 400px;
     height: fit-content;
     position: absolute;
@@ -69,5 +72,10 @@ header {
     margin:auto;
     text-align: center;
     padding: 30px;
+    color: var(--clr-light);
+    border-radius: 15px;
+}
+header h1 {
+    font-size: 5rem;
 }
 /* Header--end */
