--- a/CSS/variable.css
+++ b/CSS/variable.css
@@ -6,6 +6,9 @@
     --clr-red-300: hsl(344, 97%, 70%);
     --clr-red-400: hsl(344, 97%, 60%);
     --clr-red-500: hsl(344, 97%, 50%);
+    --clr-amber-300: hsl(47, 100%, 70%);
+    --clr-amber-400: hsl(47, 100%, 60%);
+    --clr-amber-500: hsl(47, 100%, 50%);
 
     --clr-dark: #1d1d1d;
     --clr-light: #eee;
@@ -13,7 +16,7 @@
     --ff-serif: 'Bodoni Moda','Noto Serif TC',serif;
     --ff-sans: 'poppins','LXGW WenKai TC',sans-serif;
 
-    --clr-primary: var(--clr-blue-300);
+    --clr-primary: var(--clr-amber-400);
     --clr-secondary: var(--clr-red-300);
 
     --spacing: 15px;
