--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -135,6 +135,14 @@ header h1 {
 #service .container:last-of-type .col-6:last-of-type{
     order:1;
 }
+#service .container:first-of-type .service-content {
+    background-color: var(--clr-amber-300);
+    position: relative;
+    left: -100px;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 6px 6px 12px 0px rgba(110, 77, 1, 0.2);
+}
 /* #service .col-6:nth-of-type(3){order:4;} */
 /* #service .col-6:nth-of-type(4){order:3;} */
 /* Service--end */
