--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -151,3 +151,24 @@ header h1 {
 /* #service .col-6:nth-of-type(3){order:4;} */
 /* #service .col-6:nth-of-type(4){order:3;} */
 /* Service--end */
+/* Folio--start */
+#folio {
+    padding-block: 100px;
+}
+#folio figure {
+    position: relative;
+}
+#folio figcaption {
+    position: absolute;
+    background-color: rgb(45 45 45 / .8);
+    backdrop-filter: blur(5px);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--clr-light);
+}
+/* Folio--end */
