--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -106,26 +106,23 @@ header h1 {
 #service {
     padding-block: 100px;
     background-image: linear-gradient(to right bottom,#fff7db,#fff3c8);
+    img {
+        border-radius: 12px 128px;
+    }
+    h2 {
+        font-size: 3rem;
+        text-align: center;
+        border-bottom: 1px solid hsl(47, 100%, 50%);
+    }
+    .row {
+        align-items: center;
+    }
+    h3 {
+        font-size: 2rem;
+        /* margin-bottom: var(--spacing); */
+    }
+}
 
-}
-#service img {
-    border-radius: 12px 128px;
-}
-#service h2 {
-    font-size: 3rem;
-    text-align: center;
-    border-bottom: 1px solid hsl(47, 100%, 50%);
-}
-#service .row {
-    align-items: center;
-}
-#service h3 {
-    font-size: 2rem;
-    /* margin-bottom: var(--spacing); */
-}
-#service p {
-    /* margin-bottom: var(--spacing); */
-}
 .service-content {
     display: flex;
     flex-direction: column;
@@ -152,23 +149,35 @@ header h1 {
 /* #service .col-6:nth-of-type(4){order:3;} */
 /* Service--end */
 /* Folio--start */
+
+/* css nested  巢狀css*/
 #folio {
     padding-block: 100px;
-}
-#folio figure {
-    position: relative;
-}
-#folio figcaption {
-    position: absolute;
-    background-color: rgb(45 45 45 / .8);
-    backdrop-filter: blur(5px);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--clr-light);
+    figure {
+        position: relative;
+        figcaption {
+            position: absolute;
+            background-color: rgba(255, 184, 78, 0);
+            backdrop-filter: blur(0px);
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: transparent;
+            font-size: 1.4rem;
+
+            transition: .3s;
+        }
+    }
+    a:hover {
+        figcaption {
+            color:var(--clr-dark);
+            backdrop-filter: blur(5px);
+            background-color: rgba(255, 184, 78, 0.8);
+        }
+    }
 }
 /* Folio--end */
