--- a/CSS/global.css
+++ b/CSS/global.css
@@ -36,3 +36,25 @@ img {
 .btn-blue {
     background-color: var(--clr-blue-400);;
 }
+.text-left {text-align: left;}
+.text-justify {text-align: justify;}
+.text-right {text-align: right;}
+.text-center {text-align: center;}
+@media(min-width:480px){
+    .text-sm-left {text-align: left;}
+    .text-sm-justify {text-align: justify;}
+    .text-sm-right {text-align: right;}
+    .text-sm-center {text-align: center;}
+}
+@media(min-width:768px){
+    .text-md-left {text-align: left;}
+    .text-md-justify {text-align: justify;}
+    .text-md-right {text-align: right;}
+    .text-md-center {text-align: center;}
+}
+@media(min-width:1200px){
+    .text-lg-left {text-align: left;}
+    .text-lg-justify {text-align: justify;}
+    .text-lg-right {text-align: right;}
+    .text-lg-center {text-align: center;}
+}
