--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -161,10 +161,24 @@ header h1 {
     background-color: Hsla(47, 100%, 70% , 50%);
     backdrop-filter: blur(8px);
     position: relative;
-    left: -160px;
+    left: 50px;
+    top: -200px;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 6px 6px 12px 0px rgba(110, 77, 1, 0.2);
+}
+@media(min-width: 768px){
+    #service .container:first-of-type .service-content {
+        /* background-color: var(--clr-amber-300); */
+        background-color: Hsla(47, 100%, 70% , 50%);
+        backdrop-filter: blur(8px);
+        position: relative;
+        left: -160px;
+        top: 0;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 6px 6px 12px 0px rgba(110, 77, 1, 0.2);
+    }
 }
 /* #service .col-6:nth-of-type(3){order:4;} */
 /* #service .col-6:nth-of-type(4){order:3;} */
