--- a/CSS/global.css
+++ b/CSS/global.css
@@ -40,21 +40,49 @@ img {
 .text-justify {text-align: justify;}
 .text-right {text-align: right;}
 .text-center {text-align: center;}
+
+.order-1 {order:1;}
+.order-2 {order:2;}
+.order-3 {order:3;}
+.order-4 {order:4;}
+.order-5 {order:5;}
+.order-6 {order:6;}
 @media(min-width:480px){
     .text-sm-left {text-align: left;}
     .text-sm-justify {text-align: justify;}
     .text-sm-right {text-align: right;}
     .text-sm-center {text-align: center;}
+
+    .order-sm-1 {order:1;}
+    .order-sm-2 {order:2;}
+    .order-sm-3 {order:3;}
+    .order-sm-4 {order:4;}
+    .order-sm-5 {order:5;}
+    .order-sm-6 {order:6;}
 }
 @media(min-width:768px){
     .text-md-left {text-align: left;}
     .text-md-justify {text-align: justify;}
     .text-md-right {text-align: right;}
     .text-md-center {text-align: center;}
+
+    .order-md-1 {order:1;}
+    .order-md-2 {order:2;}
+    .order-md-3 {order:3;}
+    .order-md-4 {order:4;}
+    .order-md-5 {order:5;}
+    .order-md-6 {order:6;}
 }
 @media(min-width:1200px){
     .text-lg-left {text-align: left;}
     .text-lg-justify {text-align: justify;}
     .text-lg-right {text-align: right;}
     .text-lg-center {text-align: center;}
+
+    .order-lg-1 {order:1;}
+    .order-lg-2 {order:2;}
+    .order-lg-3 {order:3;}
+    .order-lg-4 {order:4;}
+    .order-lg-5 {order:5;}
+    .order-lg-6 {order:6;}
 }
